# tinygl

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  package.json  vue.config.js  webpack.config.js
.github/workflows/: build.yml
public/: index.html
shaders/: quad.spv  uniform_reflect.frag  uv.frag
src/: App.vue  main.js
src/components/: DemoEditor.vue  TgCanvas.vue
static/: index.html
tinygl/: Cargo.toml
tinygl-bin/: Cargo.toml
tinygl-bin/src/: main.rs  state.rs
tinygl-codegen/: Cargo.toml
tinygl-codegen/src/: compiler.rs  lib.rs  types.rs
tinygl-codegen/src/compiler/: uniform_set.rs  wrapped_program.rs  wrapped_shader.rs
tinygl-codegen/src/types/: codegen_ext.rs
tinygl-codegen/tests/: codegen.rs  uniform_reflect.rs
tinygl-compiler/: Cargo.toml
tinygl-compiler/src/: codegen.rs  compiler.rs  errors.rs  gl.rs  lib.rs  model.rs  reflect.rs  shader_kind.rs  types.rs
tinygl-compiler/src/codegen/: types.rs
tinygl-compiler/src/codegen/compiler/: uniform_set.rs  wrapped_program.rs  wrapped_shader.rs
tinygl-compiler/src/codegen/types/: codegen_ext.rs
tinygl-compiler/src/compiler/: item.rs  shaderc_compiler.rs  target_type.rs  uniform_set.rs  wrapped_item.rs  wrapped_program.rs  wrapped_shader.rs
tinygl-compiler/src/model/: glsl.rs  spirv.rs
tinygl-compiler/src/reflect/: found_uniform.rs  null.rs  spirv.rs
tinygl-compiler/src/types/: codegen_ext.rs
tinygl-compiler/tests/: codegen.rs  new_api.rs  uniform_reflect.rs
tinygl-renderer/: Cargo.toml
tinygl-renderer/src/: demo.rs  lib.rs  web.rs
tinygl-renderer/src/demo/: compilable.rs  compile_error.rs  context.rs  gl_droppable.rs  pass.rs  step_program.rs
tinygl-renderer/tests/: default.rs
tinygl-renderer/tests/common/: mod.rs
tinygl/examples/: gradient.rs
tinygl/src/: error.rs  gl.rs  glowx.rs  lib.rs  wrappers.rs
tinygl/src/gl/: desktop.rs  web.rs
tinygl/src/gl/desktop/: bindings44.rs  bindings45.rs  bindings46.rs
tinygl/src/wrappers/: buffer.rs  framebuffer.rs  macros.rs  prelude.rs  program.rs  query.rs  renderbuffer.rs  shader.rs  texture.rs  uniform_block.rs  uniform_location.rs  vertex_array.rs
tinygl/src/wrappers/program/: program_common.rs  program_common_ext.rs  runtime_program.rs
tinygl/src/wrappers/shader/: binary_shader.rs  runtime_shader.rs  shader_common.rs  source_shader.rs
tinygl/src/wrappers/uniform_location/: desktop.rs  web.rs
xtask/: Cargo.toml
xtask/src/: gen_bindings.rs  main.rs
xtask/src/gen_bindings/: struct_generator.rs
