[package]
name = "tinygl-bin"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
description = "GL environment for texture synthesis - desktop binary"
repository = "https://gitlab.inria.fr/vtaverni/tinygl"
license = "MIT"

[[bin]]
name = "tinygl"
path = "src/main.rs"

[dependencies]
tinygl-renderer = { path = "../tinygl-renderer" }

env_logger = "0.6.2"
glow = { version = "0.3.0-alpha2", features = ["glutin"] }
glutin = "0.22.0-alpha3"
log = "0.4.8"
cgmath = "0.17.0"
