[package]
name = "tinygl-bin"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
description = "GL environment for texture synthesis - desktop binary"
repository = "https://gitlab.inria.fr/vtaverni/tinygl"
license = "MIT"

[[bin]]
name = "tinygl"
path = "src/main.rs"

[dependencies]
tinygl-renderer = { path = "../tinygl-renderer" }

env_logger = "0.6.2"
glow = { version = "0.3.0-alpha2", features = ["glutin"] }
glutin = "0.22.0-alpha3"
log = "0.4.8"
cgmath = "0.17.0"
failure = "0.1.5"
serde_json = "1.0.40"
hotwatch = "0.4.2"
docopt = "1.1.0"
serde = "1.0.100"
serde_yaml = "0.8.9"
imgui = "0.2.1"
imgui-opengl-renderer = { git = "https://github.com/vtavernier/rust-imgui-opengl-renderer.git" }
imgui-winit-support = { version = "0.2.1", default-features = false, features = ["winit-20"] }
