[package]
name = "tinygl-bin"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
description = "GL environment for texture synthesis - desktop binary"
repository = "https://gitlab.inria.fr/vtaverni/tinygl"
license = "MIT"

[[bin]]
name = "tinygl"
path = "src/main.rs"

[dependencies]
tinygl-renderer = { path = "../tinygl-renderer" }

env_logger = "0.7.1"
glow = { version = "0.3.0-alpha4", features = ["glutin"] }
glutin = "0.22.0-alpha5"
log = "0.4.8"
cgmath = "0.17.0"
failure = "0.1.6"
serde_json = "1.0.42"
hotwatch = "0.4.2"
docopt = "1.1.0"
serde = "1.0.103"
serde_yaml = "0.8.11"
imgui = "0.2.1"
imgui-opengl-renderer = "0.6.0"
imgui-winit-support = { version = "0.2.1", default-features = false, features = ["winit-20"] }
