[package]
name = "tinygl-codegen"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
heck = "0.3"

quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"

tinygl-compiler = { path = "../tinygl-compiler" }

[[test]]
name = "uniform_reflect"
required-features = ["spirv", "backend-shaderc"]

[features]
backend-shaderc = ["tinygl-compiler/backend-shaderc"]
transpile = ["tinygl-compiler/transpile"]
spirv = ["tinygl-compiler/spirv"]
