[package]
name = "tinygl-compiler"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
shaderc = "0.6"
heck = "0.3"
spirv_cross = { version = "0.18", features = ["glsl"] }
rspirv = { git = "https://github.com/gfx-rs/rspirv.git", rev = "5025ac0" }
spirv_headers = { git = "https://github.com/gfx-rs/rspirv.git", rev = "5025ac0" }
sha2 = "0.8"
base64 = "0.12"
thiserror = "1.0"
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
