[package]
name = "tinygl-compiler"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
heck = "0.3"
sha2 = "0.9"
base64 = "0.13"
thiserror = "1.0"

shaderc = { optional = true, version = "0.7" }

rspirv = { optional = true, version = "0.11" }
spirv_cross = { optional = true, version = "0.23", features = ["glsl"] }

quote = { optional = true, version = "1.0" }
syn = { optional = true, version = "1.0" }
proc-macro2 = { optional = true, version = "1.0" }

glsl = "6"

[[test]]
name = "uniform_reflect"
required-features = ["backend-shaderc", "spirv", "codegen"]

[features]
backend-shaderc = ["shaderc", "spirv"]
transpile = ["spirv_cross", "spirv"]
spirv = ["rspirv"]
codegen = ["quote", "syn", "proc-macro2"]
