# You must change these to your own details.
[package]
name = "tinygl-renderer"
version = "0.1.0"
authors = ["Vincent Tavernier <vincent.tavernier@inria.fr>"]
edition = "2018"
description = "GL environment for texture synthesis - support library"
repository = "https://gitlab.inria.fr/vtaverni/tinygl"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
failure = "0.1.5"
glow = "0.3.0-alpha2"
log = "0.4.8"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"

[target.wasm32-unknown-unknown.dependencies]
web-sys = { version = "0.3.27", features = ["console", "Node", "Document", "HtmlElement"] }
wasm-bindgen = "0.2.50"
wee_alloc = "0.4.5"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.2.50"
js-sys = "0.3.27"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target.'cfg(all(target_arch = "wasm32", debug_assertions))'.dependencies]
console_log = "0.1.2"
console_error_panic_hook = "0.1.6"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
env_logger = "0.6.2"
glow = { version = "0.3.0-alpha2", features = ["glutin"] }
glutin = "0.22.0-alpha3"
