[package]
name = "tinygl"
version = "0.1.0"
authors = ["Vincent Tavernier <vincent.tavernier@inria.fr>"]
edition = "2018"
license = "MIT"

[dependencies]
glow = { git = "https://github.com/vtavernier/glow.git" }
log = "0.4"
backtrace = "0.3"
thiserror = "1.0"

[build-dependencies]
gl_generator = "0.14"
