[package]
name = "tinygl"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4"
backtrace = { version = "0.3", optional = true }
thiserror = "1.0"

[target.wasm32-unknown-unknown.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[target.wasm32-unknown-unknown.dependencies.web-sys]
version = "0.3"
features = [
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlQuery",
  "WebGlRenderbuffer",
  "WebGl2RenderingContext",
  "WebGlSampler",
  "WebGlShader",
  "WebGlSync",
  "WebGlTexture",
  "WebGlTransformFeedback",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",

  "AngleInstancedArrays",
  "ExtBlendMinmax",
  "ExtColorBufferFloat",
  "ExtColorBufferHalfFloat",
  "ExtDisjointTimerQuery",
  "ExtFragDepth",
  "ExtShaderTextureLod",
  "ExtSRgb",
  "ExtTextureFilterAnisotropic",
  "OesElementIndexUint",
  "OesStandardDerivatives",
  "OesTextureFloat",
  "OesTextureFloatLinear",
  "OesTextureHalfFloat",
  "OesTextureHalfFloatLinear",
  "OesVertexArrayObject",
  "WebglColorBufferFloat",
  "WebglCompressedTextureAstc",
  "WebglCompressedTextureEtc",
  "WebglCompressedTextureEtc1",
  "WebglCompressedTexturePvrtc",
  "WebglCompressedTextureS3tc",
  "WebglCompressedTextureS3tcSrgb",
  "WebglDebugRendererInfo",
  "WebglDebugShaders",
  "WebglDepthTexture",
  "WebglDrawBuffers",
  "WebglLoseContext",
]

[dev-dependencies]
glutin = "0.24"

[features]
# TODO: Make this configurable by the library user
default = ["opengl46"]
opengl46 = []
opengl45 = []
opengl44 = []
log-backtrace = ["backtrace"]
